# kickthespypet-api

./: README.md  pyproject.toml  test.py
kickthespypet_api/: __init__.py  types.py
