[tool.poetry]
name = "kickthespypet-api"
version = "0.1.0"
description = ""
authors = ["timelesnesses <timelessnesses@timelessnesses.me>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
aiohttp = "^3.9.5"

[tool.poetry.extras]
orjson = ["orjson"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
